--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Telephone: (+44) (0113) 343 5130.
 <a href="conferences.html"> Conferences</a>;  &#8226;
 <a href="publications.html">list of publications</a>; <!--  &#8226;
 <a href=outreach.html>outreach</a>;-->  &#8226;   compiling xymatrix diagrams into HTML using Lwarp
-<a href=http://www1.maths.leeds.ac.uk/~pmtjfa/Lwarp-JFM/Sample_Lwarp_Xy-jax-split-index.html>Lwarp with Xy-Jaxv3 (split page version)</a> and <a href=Lwarp-JFM/Sample_Lwarp_Xy-jax.html>Lwarp with Xy-Jaxv3 (stand alone page version)</a>.
+<a href=Lwarp-JFM/Sample_Lwarp_Xy-jax-split-index.html>Lwarp with Xy-Jaxv3 (split page version)</a> and <a href=Lwarp-JFM/Sample_Lwarp_Xy-jax.html>Lwarp with Xy-Jaxv3 (stand alone page version)</a>.
 </tr>
 <br>
 </tr>
