--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </center>
 
 
-
+<body bgcolor="#E0F2F7">
 
 
 <p>
@@ -189,9 +189,9 @@ Do contact me if you are interested in completing a PhD degree at Leeds, in any 
 <br>
 <li> 
 <a href=" https://phd.leeds.ac.uk/project/1864-combinatorial-and-higher-categorical-techniques-in-low-dimensional-topology-and-topological-quantum-field-theory"> Combinatorial and higher-categorical techniques in low dimensional topology and topological quantum field theory
-</a>
-<br> 
+</a> 
 </li>
+<br>
 <li> 
 <a href="https://phd.leeds.ac.uk/project/596-algebraic-geometric-and-physical-underpinnings-of-topological-quantum-computation  "> Algebraic, geometric and physical underpinnings of topological quantum computation.
 </a>
